DDSPF定数を削除してDDPF定数に統合

--- a/OpenGL3D_2024_07.md
+++ b/OpenGL3D_2024_07.md
@@ -360,29 +360,26 @@ Unityの場合、パッケージマネージャから`Terrain Tools`をインス
 
 ### 1.8 モノクロ画像を読み込めるようにする
 
-それでは、本題であるモノクロ画像を読み込む機能を`LoadDDSData`関数に追加しましょう。まず、「DDSファイルがモノクロ画像かどうかを判定するための定数」を定義します。`dds.cpp`の先頭付近に次の定義を追加してください。
+それでは、本題であるモノクロ画像を読み込む機能を`LoadDDSData`関数に追加しましょう。まず、「DDSファイルがモノクロ画像かどうかを判定するための定数」を定義します。`dds.h`に次の定義を追加してください。
 
 ```diff
- constexpr GLenum GL_COMPRESSED_RGBA_S3TC_DXT1_EXT = 0x83F1;
- constexpr GLenum GL_COMPRESSED_RGBA_S3TC_DXT3_EXT = 0x83F2;
- constexpr GLenum GL_COMPRESSED_RGBA_S3TC_DXT5_EXT = 0x83F3;
-+
-+constexpr uint32_t DDSPF_RGB       = 0x0000'0040; // RGB成分がある
-+constexpr uint32_t DDSPF_LUMINANCE = 0x0002'0000; // 輝度成分がある
-+constexpr uint32_t DDSPF_ALPHA     = 0x0000'0002; // 透明度成分がある
-+constexpr uint32_t DDSPF_FORMAT_MASK = 0x0002'0042; // RGB+輝度+透明度
-
- namespace {
+ // ピクセル形式フラグ
+ constexpr uint32_t DDPF_ALPHAPIXELS = 0x01;   // alphaBitMaskが有効
+ constexpr uint32_t DDPF_ALPHA       = 0x02;   // alphaBitMaskが有効(RGBのBitMaskは無効)
+ constexpr uint32_t DDPF_FOURCC      = 0x04;   // fourCCが有効(BitMaskは無効)
+ constexpr uint32_t DDPF_RGB         = 0x40;   // RGBのBitMaskが有効
+ constexpr uint32_t DDPF_LUMINANCE = 0x2'0000; // redBitMaskが有効(GBのBitMaskは無効)
++constexpr uint32_t DDPF_FORMAT_MASK = 0x2'0043; // RGB+輝度+透明度
 
  /**
- * バイト列から数値を復元する
+ * DDSファイルヘッダ
 ```
 
-名前の`DDSPF`の部分は`DDS Pixel Format`の短縮形です。無圧縮のモノクロ画像では、追加した定義のうち`DDSPF_LUMINANCE`(ディーディーエスピーエス・ルミナンス)だけがフラグに含まれます。
+無圧縮のモノクロ画像では、追加した定義のうち`DDPF_LUMINANCE`(ディーディーエスピーエス・ルミナンス)だけがフラグに含まれます。
 
-`DDSPF_FORMAT_MASK`は`DDSPF_RGB`, `DDSPF_LUMINANCE`, `DDSPF_ALPHA`を足した値になっています。
+`DDPF_FORMAT_MASK`は`DDPF_RGB`, `DDPF_LUMINANCE`, `DDPF_ALPHA`を足した値になっています。`flags`メンバ変数と`DDPF_FORMAT_MASK`を論理和した結果が`DDPF_LUMINACE`と一致したら、モノクロ画像と判定できます。
 
-`flags`メンバ変数と`DDSPF_FORMAT_MASK`を論理和した結果が`DDSPF_LUMINACE`と一致したら、モノクロ画像と判定できます。FourCCを判定するプログラムの下に、次のプログラムを追加してください。
+`dds.cpp`を開き、`LoadDDS`関数の定義にあるFourCCを判定するプログラムの下に、次のプログラムを追加してください。
 
 ```diff
        LOG_ERROR("%sは未対応のDDSファイルです", filename);
@@ -391,7 +388,7 @@ Unityの場合、パッケージマネージャから`Terrain Tools`をインス
 
      // 圧縮テクスチャでは画像とGPUのピクセル形式を合わせる必要がある
      gpuFormat = imageFormat;
-+  } else if ((header.ddspf.flags & DDSPF_LUMINANCE_ALPHA) == DDSPF_LUMINANCE) {
++  } else if ((header.ddspf.flags & DDPF_FORMAT_MASK) == DDPF_LUMINANCE) {
 +    // 無圧縮の単色
 +    if (header.ddspf.rgbBitCount == 8) {
 +      // 8bitモノクロ画像
