草を風で揺らす処理を追加

--- a/OpenGL3D_2024_08.md
+++ b/OpenGL3D_2024_08.md
@@ -1312,13 +1312,16 @@ float ceil(float);
  private:
    std::shared_ptr<PlayerComponent> playerComponent;
 +  GameObjectPtr grass;   // 草管理用のゲームオブジェクト
++  std::shared_ptr<struct GrassInstanceHeader> instanceHeader; // 草インスタンスヘッダ
 +  float grassRange = 30; // 草の描画距離
  };
 
  #endif // HEIGHTMAPSCENE_H_INCLUDED
 ```
 
-`grass`(グラス)メンバ変数は、`Initialize`メンバ関数で作成した草オブジェクトを保持します。これは、`Update`メンバ関数で`GrassRenderer`にアクセスするために使います。
+`grass`(グラス)メンバ変数と`instanceHeader`メンバ変数は、`Initialize`メンバ関数で作成した草オブジェクトと草インスタンスヘッダ情報を保持します。
+
+これらは、`Update`メンバ関数で`GrassRenderer`にアクセスするときに使います。
 
 次に`HeightMapScene.cpp`を開き、`Initialize`メンバ関数の定義を次のように変更してください。
 
@@ -1336,10 +1339,14 @@ float ceil(float);
      grass->grassRenderer->SetHeightMap(engine.GetTexture("Res/Terrain/test_heightmap.dds"));
 
      // インスタンスヘッダを設定
-     GrassInstanceHeader instanceHeader;
-     instanceHeader.mapSize = heightMap->GetSize();
-     instanceHeader.invMapSize = 1.0f / instanceHeader.mapSize;
-     instanceHeader.heightScale = heightMap->GetHeightScale();
+-    GrassInstanceHeader instanceHeader;
+-    instanceHeader.mapSize = heightMap->GetSize();
+-    instanceHeader.invMapSize = 1.0f / instanceHeader.mapSize;
+-    instanceHeader.heightScale = heightMap->GetHeightScale();
++    instanceHeader = std::make_shared<GrassInstanceHeader>();
++    instanceHeader->mapSize = heightMap->GetSize();
++    instanceHeader->invMapSize = 1.0f / instanceHeader->mapSize;
++    instanceHeader->heightScale = heightMap->GetHeightScale();
 
      // インスタンスデータを設定
 -    std::vector<GrassInstanceData> instanceData;
@@ -1351,15 +1358,18 @@ float ceil(float);
 -    }
 +    const auto instanceData = CreateGrassInstanceData(engine, grassRange);
      grass->grassRenderer->SetInstanceData(
-       &instanceHeader, instanceData.data(), instanceData.size());
+-      &instanceHeader, instanceData.data(), instanceData.size());
++      instanceHeader.get(), instanceData.data(), instanceData.size());
    } // 草シェーダのテスト
+
+   return true;
 ```
 
 次に、`Initialize`メンバ関数の定義の下に、`Update`メンバ関数の定義を追加してください。
 
 ```diff
      grass->grassRenderer->SetInstanceData(
-       &instanceHeader, instanceData.data(), instanceData.size());
+       instanceHeader.get(), instanceData.data(), instanceData.size());
    } // 草シェーダのテスト
 
    return true;
@@ -1370,17 +1380,10 @@ float ceil(float);
 +*/
 +void HeightMapScene::Update(Engine& engine, float deltaTime)
 +{
-+  // インスタンスヘッダを設定
-+  GrassInstanceHeader instanceHeader;
-+  const auto heightMap = engine.GetHeightMap();
-+  instanceHeader.mapSize = heightMap->GetSize();
-+  instanceHeader.invMapSize = 1.0f / instanceHeader.mapSize;
-+  instanceHeader.heightScale = heightMap->GetHeightScale();
-+
 +  // インスタンスデータを設定
 +  const auto instanceData = CreateGrassInstanceData(engine, grassRange);
 +  grass->grassRenderer->SetInstanceData(
-+    &instanceHeader, instanceData.data(), instanceData.size());
++    instanceHeader.get(), instanceData.data(), instanceData.size());
 +}
 ```
 
@@ -1543,7 +1546,7 @@ void main()
 +  if (grassHeight >= 0.1f) { // 0.1以上は草が生えているとみなす
 +    gl_Position.y *= pow(grassHeight, 2.2); // 草丈を反映
 +  } else {
-+    gl_Position.y = -1; // 地面の下に埋める
++    gl_Position.y = -1; // 地面の下に隠す
 +  }
 
    // 地形の高さに移動
@@ -1603,7 +1606,7 @@ void main()
 プログラムが書けたらビルドして実行してください。植生マップで白く描いた部分だけに草が生えていたら成功です。
 
 <p align="center">
-<img src="images/2024_08_result_6.jpg" width="45%" /><br>
+<img src="images/2024_08_result_6.jpg" width="45%" />
 </p>
 
 <pre class="tnmai_assignment">
@@ -1613,8 +1616,160 @@ void main()
 また、ただ丸いだけのブラシより、形があいまいで複雑な形状のブラシのほうが、自然な見た目を作りやすいです。
 </pre>
 
+### 2.9 風になびく草を表現する
+
+動かない草はあまり草らしくみえません。そこで、タイマーを追加して風で草が揺れる効果を再現します。
+
+`grass.vert`を開き、`GrassInstanceData`ブロックに2つの変数を追加してください。
+
+```diff
+   vec2 mapSize;      // ハイトマップの大きさ
+   vec2 invMapSize;   // mapSizeの逆数
+   float heightScale; // ハイトマップの高さ係数
++  float timer;       // アニメーションとかに使うタイマー
++  float windPower;   // 風の強さ
+-  float dummy_[3];   // 16バイト境界に合わせるためのダミー配列
++  float dummy_[1];   // 16バイト境界に合わせるためのダミー配列
+   vec2 grassProperties[]; // 草を生やす位置の配列
+ };
+```
+
+次に、`main`関数にある草丈を反映するプログラムに、草を揺らすプログラムを追加してください。
+
+```diff
+   // 植生マップから草丈を取得して高さに反映
+   float grassHeight = texture(texVegetation, gl_Position.xz * invMapSize).r;
+   if (grassHeight >= 0.1f) { // 0.1以上は草が生えているとみなす
++    // 時間経過による風の強さ
++    float currentWindPower = sin(timer * 3) * windPower;
++
++    // 草の先端ほど風の影響を受けやすくする
++    float influence = max(gl_Position.y, 0);
++
++    // ななめ方向に風を吹かせる
++    gl_Position.xz += currentWindPower * influence;
++
++    // 草丈を反映
+     grassHeight = pow(grassHeight, 2.2);
+     gl_Position.y *= grassHeight; // 草丈を反映
+```
+
+`timer`に`3`をかけているのは、約1秒で草を1回揺らすためです。
+
+続いて、`GrassRenderer.h`を開き、`GrassInstnaceHeader`構造体にタイマーと草モデルの高さメンバ変数を追加してください。
+
+```diff
+   vec2 mapSize;      // ハイトマップの大きさ
+   vec2 invMapSize;   // mapSizeの逆数
+   float heightScale; // ハイトマップの高さ係数
++  float timer;       // アニメーションとかに使うタイマー
++  float windPower;   // 風の強さ
+-  float dummy_[3];   // 16バイト境界に合わせるためのダミー配列
++  float dummy_[1];   // 16バイト境界に合わせるためのダミー配列
+ };
+
+ // 草インスタンスデータ型
+ using GrassInstanceData = vec2;
+```
+
+次に`HeightMapScene.h`を開き、`HeightMapScene`クラスの定義にタイマーメンバ変数を追加してください。
+
+```diff
+   GameObjectPtr grass;   // 草管理用のゲームオブジェクト
+   std::shared_ptr<struct GrassInstanceHeader> instanceHeader; // 草インスタンスヘッダ
+   float grassRange = 30; // 草の描画距離
++  float timer = 0;       // 草アニメーションタイマー
+ };
+
+ #endif // HEIGHTMAPSCENE_H_INCLUDED
+```
+
+そして、`HeightMapScene.cpp`を開き、`Initialize`メンバ関数にあるインスタンスヘッダを設定するプログラムに、次のプログラムを追加してください。
+
+```diff
+     // インスタンスヘッダを設定
+     instanceHeader = std::make_shared<GrassInstanceHeader>();
+     instanceHeader->mapSize = heightMap->GetSize();
+     instanceHeader->invMapSize = 1.0f / instanceHeader->mapSize;
++    instanceHeader->timer = timer;
++    instanceHeader->windPower = 0.1f; // プラスマイナス10cmくらい揺らす
+     instanceHeader->heightScale = heightMap->GetHeightScale();
+
+     // インスタンスデータを設定
+```
+
+最後に、`Update`メンバ関数の定義にタイマーを更新するプログラムを追加してください。
+
+```diff
+ * シーンを更新する
+ */
+ void HeightMapScene::Update(Engine& engine, float deltaTime)
+ {
++  // タイマーを更新
++  timer += deltaTime;
++  instanceHeader->timer = timer;
++
+   // インスタンスデータを設定
+   const auto instanceData = CreateGrassInstanceData(engine, grassRange);
+```
+
+プログラムが書けたらビルドして実行してください。草が揺れていたら成功です。
+
+### 2.10 草の揺れかたを改善する
+
+全部の草が同じように揺れていると、あまり自然には感じられません。そこで、草ごとに揺れかたが変わるようにします。`grass.vert`を開き、風の強さを計算するプログラムを次のように変更してください。
+
+```diff
+   // 植生マップから草丈を取得して高さに反映
+   float grassHeight = texture(texVegetation, gl_Position.xz * invMapSize).r;
+   if (grassHeight >= 0.1f) { // 0.1以上は草が生えているとみなす
+     // 時間経過による風の強さ
+-    float currentWindPower = sin(timer * 3) * windPower;
++    float currentWindPower = sin(timer * 3 + rad) * windPower;
+
+     // 草の先端ほど風の影響を受けやすくする
+     float influence = max(gl_Position.y, 0);
+```
+
+`rad`(ラッド)変数は草をY軸回転させるときに使った疑似乱数です。プログラムが書けたらビルドして実行してください。草の揺れかたが少しずつ違っていたら成功です。
+
+次に、揺れる量が単調なのを改善します。現在はひとつの`sin`カーブで揺れを再現しているので、周期性が分かりやすいです。そこで、周期の異なる`sin`カーブを合成します。
+
+次の図は、`sin`ひとつの場合とふたつの`sin`を合成した場合の周期の違いを表したものです。
+
+<p align="center">
+<img src="images/2024_08_sin_curve_single.png" width="40%" />&emsp;<img src="images/2024_08_sin_curve_double.png" width="40%" /><br>
+左=sinひとつの周期 右=2つのsinを合成した周期の一部
+</p>
+
+このように、異なる周期のカーブを合成すると、非常に長い周期のカーブを作り出せます。それでは、`grass.vert`を開き、風の強さを計算するプログラムを次のように変更してください。
+
+```diff
+   // 植生マップから草丈を取得して高さに反映
+   float grassHeight = texture(texVegetation, gl_Position.xz * invMapSize).r;
+   if (grassHeight >= 0.1f) { // 0.1以上は草が生えているとみなす
+     // 時間経過による風の強さ
+-    float currentWindPower = sin(timer * 3 + rad) * windPower;
++    float currentWindPower =
++      sin(timer * 3 + rad) * sin(timer * 0.79 + rad) * windPower;
+
+     // 草の先端ほど風の影響を受けやすくする
+     float influence = max(gl_Position.y, 0);
+```
+
+なお、`0.79`は、`3`と合成したとき揺れかたが自然に見えるように、いくつか試して選びました。長い周期を作りたいときは、ある程度離れた素数を選ぶとうまくいくことが多いです。
+
+プログラムが書けたらビルドして実行してください。揺れかたの周期性が分かりにくくなっていたら成功です。
+
+<p align="center">
+<img src="images/2024_08_result_7.jpg" width="45%" /><br>
+[画像では分かりにくいが、草がより自然に揺れている]
+</p>
+
 >**【2章のまとめ】**
 >
+>* 
+>* 
 >* 
 >* 
 >* 
