--- a/OpenGL3D_2024_09.md
+++ b/OpenGL3D_2024_09.md
@@ -613,6 +613,10 @@ ZX軸の2次元スウィープアンドプルーン(2D-SAP)は、次の手順で
 >3. 2つのリストのうち重複するペアだけを残す。
 >4. 残ったペアに対して衝突判定を実行する。
 
+<p align="center">
+<img src="images/2024_09_sweep_and_prune_2d_x.png" width="45%" />&emsp;<img src="images/2024_09_sweep_and_prune_2d_z.png" width="42%" />
+</p>
+
 多くのゲームでは、ゲームオブジェクトがY軸方向に重なって存在することは少ないです。そのため、XZ軸の2D SAPでも十分な結果が得られます。
 
 >3次元の宇宙空間を移動するようなゲームでは、XYZの3次元スウィープアンドプルーン(3D-SAP)を試してみるとよいでしょう。
@@ -932,6 +936,18 @@ ZX軸の2次元スウィープアンドプルーン(2D-SAP)は、次の手順で
 また、軸によってソート結果が変わるため、同じペアが検出された場合でも、インデックスの順序は異なる可能性があります。しかし、インデックスの順序がバラバラだと、同じペアを見つけるのが難しくなります。
 
 そこで、2つのインデックスのうち小さいほうを上位16bit、大きいほうを下位16bitに設定することで、順序を統一しています。
+
+例えば、次の図のようにゲームオブジェクトが配置されているとします。
+
+<p align="center">
+<img src="images/2024_09_sweep_and_prune_2d_x.png" width="45%" />&emsp;<img src="images/2024_09_sweep_and_prune_2d_z.png" width="42%" /><br>
+(前の図の再掲)
+</p>
+
+このとき、`pairList`には以下のデータが記録されます。
+
+>`pairList[0] = (0, 1), (0, 2), (1, 2), (1, 3)`<br>
+>`pairList[1] = (0, 2), (0, 3), (1, 3), (2, 3)`
 
 これで、X軸の衝突候補ペアと、Z軸の衝突候補ペアを見つけられるようになりました。
 
