変数名を正しくする

--- a/OpenGL3D_2023_21.md
+++ b/OpenGL3D_2023_21.md
@@ -632,7 +632,7 @@ void glGetProgramiv(プログラムの管理番号, 取得する情報の種類,
 +  glUseProgram(*progShadowSkeletal);
 +  glBindVertexArray(*meshBuffer->GetVAOSkeletal());
 +  for (const GameObject* e : skeletalMeshList) {
-+    e->renderer->Draw(*e, *progShadowSkeletal, ssboJointMatrix[jointMatrixIndex], bpJointMatrices);
++    e->renderer->Draw(*e, *progShadowSkeletal, *ssboJointMatrices[jointMatrixIndex], bpJointMatrices);
 +  }
 
    // 深度テクスチャを割り当てる
