球の中心がOBBに埋まっている場合の貫通距離の計算を修正

--- a/OpenGL3D_2023_16.md
+++ b/OpenGL3D_2023_16.md
@@ -194,13 +194,15 @@ OBB用の`Intersect`関数とAABB用の`Intersect`関数と見比べてみてく
 +        sign = 1;
 +      }
 +    }
-+    penetration = box.axis[faceIndex] * (distance * sign);
++    penetration = box.axis[faceIndex] * ((distance + sphere.radius) * sign);
    }
    return true;
  }
 ```
 
 OBBの場合、貫通ベクトルには`axis`配列が利用できます。そのため、AABBのように貫通ベクトル配列を定義する必要はありません。
+
+`distance`(ディスタンス)は「球の中心から最も近い平面までの距離」です。`for`ループによって6つの平面までの距離を調べ、距離が最も短い平面が「押し返す方向」として選ばれます。
 
 これで、OBBと球体の交差判定は完成です。
 
