習得目標と各章のまとめを追加

--- a/OpenGL3D_2024_09.md
+++ b/OpenGL3D_2024_09.md
@@ -4,13 +4,15 @@
 
 ## 習得目標
 
-* 
-* 
-* 
+* 総当たり法の問題点を説明できる。
+* ブロードフェーズとナローフェーズの違いを説明できる。
+* スウィープアンドプルーンの手順を説明できる。
+* スウィープアンドプルーンを2次元以上で実行する利点を説明できる。
+* ゲーム内容によって、ブロードフェーズの手法を変える理由を説明できる。
 
 ## 1. 1次元スウィープアンドプルーン
 
-### 1.1 現在の衝突判定の問題点
+### 1.1 総当たり法による衝突判定の問題点
 
 現在の衝突判定は、「コライダーを持つすべてのゲームオブジェクトの組み合わせ」について判定を行うことで実現しています。この方法は、日本語では「総当たり」、英語では「ブルートフォース」と呼ばれています。
 
@@ -221,9 +223,9 @@ FPSを確認できたら</code>Debug</code>ビルドに戻しなさい。
 
 つまり、`999`回のうち`989`回は、衝突の可能性がほとんどないのに判定が行われているわけです。もし「衝突の可能性がほとんどないゲームオブジェクト」を除外できれば、衝突判定を高速化できるはずです。
 
-「事前に衝突しそうにないオブジェクトを除外する操作」のことを、`Broad Phase`(ブロード・フェーズ、「広域段階」という意味)と呼びます。
+「事前に衝突しそうにないオブジェクトを除外する操作」のことを、`Broad Phase`(ブロード・フェーズ、「広域段階」という意味)と呼びます。ブロードフェーズでは、多少雑でもいいので高速に判定できることが重要です。
 
-そして、「ブロードフェーズ後に残ったオブジェクトを判定する操作」のことを、`Narrow Phase`(ナロー・フェーズ、「狭域段階」という意味)と呼びます。
+そして、「ブロードフェーズ後に残ったオブジェクトを判定する操作」のことを、`Narrow Phase`(ナロー・フェーズ、「狭域段階」という意味)と呼びます。ナローフェーズでは、厳密な衝突判定を実行します。
 
 このように衝突判定を2段階に分ける利点は、それぞれの段階で異なる最適なアルゴリズムを選択できることです。
 
@@ -590,15 +592,15 @@ OpenGLの場合、カメラのデフォルトの向きは-Z方向なので、ゲ
 
 >**【1章のまとめ】**
 >
->* 
->* 
->* 
+>* 総当たり法では、オブジェクトが増えると急速に判定回数が増え、非常に長い時間がかかるようになる。
+>* 衝突判定は、大まかな判定を行うブロードフェーズと、厳密な判定を行うナローフェーズに分けられる。
+>* スウィープアンドプルーン(SAP)は、ブロードフェーズ用の判定方法のひとつ。オブジェクトを軸に沿ってソートすることで、衝突の可能性があるペアだけを見つけられる。
 
 <div style="page-break-after: always"></div>
 
 ## 2. 2次元スウィープアンドプルーン
 
-### 2.1 
+### 2.1 1D-SAPの限界と2D-SAPの手順
 
 1次元スウィープアンドプルーン(1D-SAP)の時点で、総当たり法に比べて非常に効率的な衝突判定が行えるようになりました。
 
@@ -619,7 +621,9 @@ ZX軸の2次元スウィープアンドプルーン(2D-SAP)は、次の手順で
 
 多くのゲームでは、ゲームオブジェクトがY軸方向に重なって存在することは少ないです。そのため、XZ軸の2D SAPでも十分な結果が得られます。
 
->3次元の宇宙空間を移動するようなゲームでは、XYZの3次元スウィープアンドプルーン(3D-SAP)を試してみるとよいでしょう。
+>3次元の宇宙空間を移動するようなゲームでは、XYZの3次元スウィープアンドプルーン(3D-SAP)を試してみてもよいでしょう。
+
+### 2.2 1D-SAPと2D-SAPを切り替えられるようにする
 
 それでは、2D-SAPを追加しましょう。`HandleGameObjectCollision`メンバ関数の定義にあるマクロ定義を次のように変更してください。
 
@@ -651,6 +655,8 @@ ZX軸の2次元スウィープアンドプルーン(2D-SAP)は、次の手順で
    // ワールド座標系の衝突判定を作成
    std::vector<WorldColliderList> colliders;
 ```
+
+### 2.3 CollisionInterval構造体を2D-SAP用に改造する
 
 2D-SAPでもスウィープアンドプルーン法という点は同じなので、1D-SAPプログラムをコピーして改造することにします。`CollisionInterval`構造体をコピーして、プリプロセッサマクロの下に貼り付けてください。
 
@@ -770,6 +776,10 @@ ZX軸の2次元スウィープアンドプルーン(2D-SAP)は、次の手順で
      colliders.push_back(ci);
    } // for gameObjects
 ```
+
+これで、2D-SAP用の`CollisionInterval`構造体を定義し、その配列にデータが記録されるようになりました。
+
+### 2.4 衝突する可能性のあるペアを記録する
 
 次に、衝突の可能性のあるゲームオブジェクトのペアを見つけます。1D-SAPでは、ペアを見つけたらすぐに衝突判定を行っていました。しかし多次元SAPでは、見つけたペアは記録するだけで、衝突判定はまた後で行います。
 
@@ -951,6 +961,8 @@ ZX軸の2次元スウィープアンドプルーン(2D-SAP)は、次の手順で
 
 これで、X軸の衝突候補ペアと、Z軸の衝突候補ペアを見つけられるようになりました。
 
+### 2.5 片方の軸に含まれない衝突候補ペアを除外する
+
 さて、実際に衝突の可能性があるのは、両方の軸で衝突候補として記録されているペアに限られます。そこで、X軸の衝突候補ペア配列から、Z軸の衝突候補ペア配列に「含まれないペア」を除外します。
 
 すると、X軸の衝突候補ペア配列には「Z軸でも衝突の可能性があると判定されたペア」だけが残ります。
@@ -992,6 +1004,8 @@ ZX軸の2次元スウィープアンドプルーン(2D-SAP)は、次の手順で
 衝突候補ペア配列はソート済みなので、小さいほうの読み取り位置を進めていけば、値が一致する部分を見つけられます。
 
 値が一致した場合はX軸の配列の先頭から順にコピーしていきます。結果として、`pairList[0]`の先頭から`writeX`までの範囲に、どちらの軸にも存在する全てのペアがコピーされた状態になります。
+
+### 2.6 残った衝突候補ペアの衝突を判定する
 
 最後に、衝突判定を実行します。衝突候補ペアを除外するプログラムの下に、次のプログラムを追加してください。
 
@@ -1036,14 +1050,9 @@ ZX軸の2次元スウィープアンドプルーン(2D-SAP)は、次の手順で
 
 どの衝突判定手法がよいかはゲーム内容によるので、自分のゲームに合った手法を選択してください。
 
-
-
-
 >**【2章のまとめ】**
 >
->* 
->* 
->* 
-
-<div style="page-break-after: always"></div>
-
+>* 1次元スウィープアンドプルーン(1D-SAP)では、他の軸で明らかに交差していないオブジェクトのペアを除外できない。
+>* スウィープアンドプルーンを複数の軸に対して実行することで、衝突の可能性のあるペアをさらに大きく削減できる。
+>* 多くのゲームでは垂直方向にオブジェクトが分布することは少ないので、X軸とZ軸だけの2次元スウィープアンドプルーン(2D-SAP)で十分な結果が得られる。
+>* オブジェクト数が十分に少ない場合、「総当たり法」でも十分な性能が得られる。ゲーム内容によって、ブロードフェーズに使う手法を変えるとよい。
