アニメーションをPlayしたときEvaluateを実行する.
コンポーネントの実行タイミングによってTポーズが表示される問題への対策.

--- a/OpenGL3D_2023_20.md
+++ b/OpenGL3D_2023_20.md
@@ -982,6 +982,7 @@ void glDeleteSync(削除する同期オブジェクト);
 +  currentClip = itr->second;
 +  isPlaying = true; // 再生状態にする
 +  timer = 0; // 最初から再生
++  currentClip->Evaluate(*owner, 0); // 0秒目の状態を反映
 +}
 ```
 
