オブジェクトが地形に埋まらないように位置を変更したり、文章を読みやすくしたりする

--- a/OpenGL3D_2024_09.md
+++ b/OpenGL3D_2024_09.md
@@ -117,7 +117,7 @@
 
 これで、タイトルバーに`FPS`が表示されるようになりました。
 
-それでは、衝突判定用のゲームオブジェクトを作成しましょう。`HeightMapScene.cpp`を開き、`SphereCollider.h`と`BoxCollider.h`をインクルードしてください。
+それでは、衝突判定用のゲームオブジェクトを作成しましょう。`HeightMapScene.cpp`を開き、`SphereCollider.h`をインクルードしてください。
 
 ```diff
  * @file HeightMapScene.cpp
@@ -125,7 +125,6 @@
  #include "HeightMapScene.h"
  #include "PlayerComponent.h"
 +#include "Engine/SphereCollider.h"
-+#include "Engine/BoxCollider.h"
  #include "Engine/GrassRenderer.h"
 
  /**
@@ -141,6 +140,8 @@
 +
 +  // 衝突判定のテスト
 +  {
+
++    const auto sphereMesh = engine.LoadOBJ("Res/MeshData/ico_sphere.obj");
 +    for (int i = 0; i < 100; ++i) {
 +      // 名前に番号をふる
 +      std::string name = "collider.";
@@ -153,8 +154,8 @@
 +      const float z = static_cast<float>((i / 10) * 3);
 +
 +      // ゲームオブジェクトを作成
-+      auto go = engine.Create<GameObject>(name.c_str(), { x, 15, z });
-+      go->staticMesh = engine.LoadOBJ("Res/MeshData/ico_sphere.obj");
++      auto go = engine.Create<GameObject>(name.c_str(), { x, 20, z });
++      go->staticMesh = sphereMesh;
 +      auto characterMovement = go->AddComponent<CharacterMovement>();
 +      auto collider = go->AddComponent<SphereCollider>();
 +    }
@@ -167,7 +168,8 @@
 プログラムが書けたらビルドして実行してください。100個の球体が落下し、下半分が地面に埋まったら成功です。
 
 <p align="center">
-<img src="images/2024_09_result_0.jpg" width="45%" />
+<img src="images/2024_09_result_0.jpg" width="45%" /><br>
+[※この画像はキューブマップを設定して撮影しました]
 </p>
 
 それから、タイトルバーの`FPS`の数値を確認してください。この数値は「1秒間に実行されたゲームループの回数」を表します。数値が大きいほど、プログラムが高速に動作していることを表します。
@@ -194,7 +196,7 @@
 +      const float z = static_cast<float>((i / 32) * 3);
 
        // ゲームオブジェクトを作成
-       auto go = engine.Create<GameObject>(name.c_str(), { x, 15, z });
+       auto go = engine.Create<GameObject>(name.c_str(), { x, 20, z });
        go->staticMesh = engine.LoadOBJ("Res/MeshData/ico_sphere.obj");
 ```
 
@@ -963,7 +965,7 @@ ZX軸の2次元スウィープアンドプルーン(2D-SAP)は、次の手順で
 
 ### 2.5 片方の軸に含まれない衝突候補ペアを除外する
 
-さて、実際に衝突の可能性があるのは、両方の軸で衝突候補として記録されているペアに限られます。そこで、X軸の衝突候補ペア配列から、Z軸の衝突候補ペア配列に「含まれないペア」を除外します。
+さて、実際に衝突の可能性があるのは、両方の軸で衝突候補として記録されているペアに限られます。そこで、X軸の衝突候補ペア配列から、Z軸の衝突候補ペア配列に「含まれない」ペアを除外します。
 
 すると、X軸の衝突候補ペア配列には「Z軸でも衝突の可能性があると判定されたペア」だけが残ります。
 
