specularPower変数のエラーを修正

--- a/OpenGL3D_2023_22.md
+++ b/OpenGL3D_2023_22.md
@@ -734,7 +734,7 @@ $$
      }
 +
 +    // スペキュラ係数の読み取りを試みる
-+    if (sscanf(line.data(), " Ns %f", &pMaterial->specularPower) == 1) {
++    if (sscanf(line.data(), " Ns %f", &specularPower) == 1) {
 +      continue;
 +    }
    }
@@ -758,7 +758,7 @@ $$
 
 ```diff
      // スペキュラ係数の読み取りを試みる
-     if (sscanf(line.data(), " Ns %f", &pMaterial->specularPower) == 1) {
+     if (sscanf(line.data(), " Ns %f", &specularPower) == 1) {
        continue;
      }
 +
