ProgramObject関連のエラーを修正

--- a/OpenGL3D_2023_22.md
+++ b/OpenGL3D_2023_22.md
@@ -838,11 +838,54 @@ GLint glGetUniformLocation(シェーダプログラムの管理番号, ユニフ
 ### 1.16 Draw関数をラフネスとメタリックに対応させる
 
 次に、メッシュの`Draw`関数をラフネスとメタリックに対応させます。<br>
-`Mesh.cpp`を開き、`Mesh`用の`Draw`関数の定義を次のように変更してください。
+`Mesh.h`を開き、次の先行宣言を追加してください。
 
 ```diff
- void Draw(const std::vector<DrawParams>& drawParamsList,
-   const ProgramObject& program,
+ // 先行宣言
+ class MeshBuffer;
+ using MeshBufferPtr = std::shared_ptr<MeshBuffer>;
++class ProgramObject;
+
+ /**
+ * 頂点データ形式
+```
+
+次に、`Mesh`用の`Draw`関数の定義を次のように変更してください。
+
+```diff
+   MaterialList materials; // 共有マテリアル
+ };
+ using StaticMeshPtr = std::shared_ptr<StaticMesh>;
+ void Draw(const StaticMesh& mesh, GLuint program, const MaterialList& materials);
+-void Draw(const std::vector<DrawParams>& drawParamsList, GLuint program,
++void Draw(const std::vector<DrawParams>& drawParamsList, const ProgramObject& program,
+   const MaterialList& materials, const vec4* objectColor);
+
+ /**
+ * 関節付き頂点データ形式
+```
+
+続いて`Mesh.cpp`を開き、`ProgramObject.h`をインクルードしてください。
+
+```diff
+ * @file Mesh.cpp
+ */
+ #define _CRT_SECURE_NO_WARNINGS
+ #include "Mesh.h"
++#include "ProgramObject.h"
+ #include "Debug.h"
+ #include "MikkTSpace/mikktspace.h"
+ #include <numeric>
+```
+
+そして、`Mesh`用の`Draw`関数の定義を次のように変更してください。
+
+```diff
+ /**
+ * 描画パラメータ配列を描画する
+ */
+-void Draw(const std::vector<DrawParams>& drawParamsList, int program
++void Draw(const std::vector<DrawParams>& drawParamsList, const ProgramObject& program,
    const MaterialList& materials, const vec4* objectColor)
  {
 +  const GLint locRoughnessAndMetallic = program.RoughnessAndMetallicLocation();
