program変数の型の変更漏れを直す

--- a/OpenGL3D_2023_22.md
+++ b/OpenGL3D_2023_22.md
@@ -856,8 +856,9 @@ GLint glGetUniformLocation(シェーダプログラムの管理番号, ユニフ
    MaterialList materials; // 共有マテリアル
  };
  using StaticMeshPtr = std::shared_ptr<StaticMesh>;
- void Draw(const StaticMesh& mesh, GLuint program, const MaterialList& materials);
+-void Draw(const StaticMesh& mesh, GLuint program, const MaterialList& materials);
 -void Draw(const std::vector<DrawParams>& drawParamsList, GLuint program,
++void Draw(const StaticMesh& mesh, const ProgramObject& program, const MaterialList& materials);
 +void Draw(const std::vector<DrawParams>& drawParamsList, const ProgramObject& program,
    const MaterialList& materials, const vec4* objectColor);
 
@@ -878,7 +879,19 @@ GLint glGetUniformLocation(シェーダプログラムの管理番号, ユニフ
  #include <numeric>
 ```
 
-そして、`Mesh`用の`Draw`関数の定義を次のように変更してください。
+そして、`Mesh`用の2つの`Draw`関数の定義を次のように変更してください。
+
+```diff
+ /**
+ * メッシュを描画する
+ */
+-void Draw(const StaticMesh& mesh, GLuint program, const MaterialList& materials)
++void Draw(const StaticMesh& mesh, const ProgramObject& program, const MaterialList& materials)
+ {
+   // カラーパラメータを取得
+   vec4 objectColor;
+   bool hasUniformColor = true;
+```
 
 ```diff
  /**
@@ -911,6 +924,31 @@ GLint glGetUniformLocation(シェーダプログラムの管理番号, ユニフ
        if (material.texBaseColor) {
          const GLuint tex = *material.texBaseColor;
          glBindTextures(0, 1, &tex);
+```
+
+それから、`Engine`クラスでこれらの関数を呼び出している部分も変更しなくてはなりません。`Engine.h`を開き、`DrawGameObject`メンバ関数の宣言を次のように変更してください。
+
+```diff
+   void CreateMainFBO(int width, int height);
+   void Update();
+   void Render();
+-  void DrawGameObject(GLuint prog,
++  void DrawGameObject(const ProgramObject& prog,
+     GameObjectList::iterator begin,
+     GameObjectList::iterator end);
+```
+
+次に`Engine.cpp`を開き、`DrawGameObject`メンバ関数の定義を次のように変更してください。
+
+```diff
+ * @param prog  描画に使うプログラムパイプラインオブジェクト
+ * @param begin 描画するゲームオブジェクト範囲の先頭
+ * @param end   描画するゲームオブジェクト範囲の終端
+ */
+-void Engine::DrawGameObject(GLuint prog,
++void Engine::DrawGameObject(const ProgramObject& prog,
+   GameObjectList::iterator begin,
+   GameObjectList::iterator end)
 ```
 
 プログラムが書けたらビルドして実行してください。周囲の物体に光沢がついていたら成功です。
